Improve session management.